--- a/styles/global.css
+++ b/styles/global.css
@@ -1,8 +1,8 @@
 :root{
     --border-medium: 1px solid rgba(0,0,0, 1);
-    --border-thin: 1px solid rgba(0,0,0, 0.3);
+    --border-thin: 1px solid rgba(0,0,0, 0.5);
     --border-ultra-thin: 1px solid rgba(0,0,0, 0.1);
-    --border-radius-small: 7px;
+    --border-radius-small: 5px;
     --border-radius-medium: 14px;
     --border-radius-large: 28px;
     --border-radius-circle: 50%;
@@ -17,6 +17,22 @@
 }
 
 body{
+    /* ! Colors */
+    --main-text-color: #000000;
+    --primary-bg-color: #fffffe;
+    --secondary-bg-color: #1A3A3A;
+    --highlight-color: #A997DF;
+    --highlight-darker-color: #4F517D;
+    --lightest-violet-color: #DCCFEC;
+    --ultra-light-violet-color: #DDC4DD;
+    --red-color: rgb(235,81,96);
+    --tiffany-mint-color: rgb(149,217,195);
+    --yellow-color: rgb(255,177,0);
+
+    /* ! Stuff */
+    background-color: var(--primary-bg-color);
+    color: var(--main-text-color);
+    position: relative;
     min-height: 100vh;
     width: 100%;
 }
@@ -42,6 +58,7 @@ button{
 }
 
 .next-link{
+    color: var(--main-text-color);
     cursor: pointer;
     text-decoration: none;
 }
@@ -58,4 +75,30 @@ button{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.icons{
+    height: 18px;
+    width: 18px;
+}
+
+.radius-small{
+    border-radius: var(--border-radius-small);
+}
+
+/* Globals */
+.company-header-link{
+    border: var(--border-ultra-thin);
+    border-radius: var(--border-radius-small);
+    padding: 0.25em;
+}
+.stash-txt{
+    color: white;
+    background-color: var(--highlight-darker-color);
+    border-radius: var(--border-radius-small);
+    padding: 0 0.3em;
+}
+
+.company-header-link:hover{
+    border: var(--border-thin);
 }
