--- a/styles/layouts/navbar.css
+++ b/styles/layouts/navbar.css
@@ -7,7 +7,9 @@ nav{
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
+    position: relative;
     height: 4em;
+    width: 100%;
 }
 
 .index-nav-bar-buttons{
@@ -16,7 +18,7 @@ nav{
     justify-content: space-around;
     align-items: center;
     margin-left: auto;
-    height: 40px;
+    height: 38px;
     width: 10em;
 }
 
@@ -32,5 +34,5 @@ nav{
 }
 
 .signup-wrapper:hover, .theme-switch-wrapper:hover{
-    background-color: var(--highlight-color);
+    border: var(--border-thin);
 }
