--- a/styles/layouts/footer.css
+++ b/styles/layouts/footer.css
@@ -1,7 +1,7 @@
 footer{
     background-color: var(--highlight-color);
+    position: relative;
     bottom: 0;
+    right: 0;
     height: 175px;
-    position: absolute;
-    width: 100%;
 }
