--- a/styles/layouts/footer.css
+++ b/styles/layouts/footer.css
@@ -1,6 +1,7 @@
 footer{
     background-color: var(--highlight-color);
     position: relative;
+    margin-top: 1em;
     bottom: 0;
     right: 0;
     height: 175px;
