--- a/styles/components/image-container.css
+++ b/styles/components/image-container.css
@@ -3,3 +3,47 @@
     height: 100%;
     width: 100%;
 }
+
+.img-cont-icons{
+    height: 28px;
+    width: 28px;
+}
+
+.top-right-buttons{
+    background-color: var(--yellow-color);
+    border-top-right-radius: var(--border-radius-small);
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 5em;
+    width: 3em;
+    z-index: 1;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.bottom-container{
+    background-color: var(--yellow-color);
+    border-bottom-left-radius: var(--border-radius-small);
+    border-bottom-right-radius: var(--border-radius-small);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0 0 0 1em;
+    height: 4em;
+    width: 100%;
+    z-index: 1;
+}
+
+.img-cont-photographer-name{
+    margin: 0 0.3em;
+}
+
+.image-container{
+    z-index: -1;
+}
