--- a/styles/layouts/navbar.css
+++ b/styles/layouts/navbar.css
@@ -13,8 +13,7 @@ nav{
 }
 
 .company-header-link{
-    border: var(--border-ultra-thin);
-    border-radius: var(--border-radius-small);
+    border: 1px solid rgba(256,256,256, 0.5);
     color: white;
     margin: 0 1em;
     padding: 0.25em;
@@ -43,9 +42,10 @@ nav{
 }
 
 .signup-wrapper, .theme-switch-wrapper{
+    background-color: rgba(10,100,100, 0.1);
+    border: 1px solid rgba(256,256,256, 0.5);
     color: white;
     cursor: pointer;
-    border: var(--border-ultra-thin);
     height: 100%;
     width: 5em;
 }
