--- a/styles/layouts/index.css
+++ b/styles/layouts/index.css
@@ -21,26 +21,6 @@
     flex-grow: 1;
 }
 
-.curated-txt{
-    font-size: 18px;
-    padding: 1em 0;
-}
-
-.index-curated-images-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(450px, 1fr));
-    gap: 1em;
-    padding-bottom: 1em;
-    width: 100%;
-}
-
-.curated-image-itself{
-    object-fit: cover;
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
 /* !Index loading sekeleton */
 .index-loading-container{
     display: grid;
@@ -68,4 +48,20 @@
     100% {
       opacity: 0.1;
     }
+}
+
+.index-curated-images-container{
+    display: grid;
+    gap: 1em;
+    grid-template-columns: repeat(auto-fill,minmax(400px, 1fr));
+    justify-items: center;
+    align-items: center
+}
+
+.index-curated-image{
+    border-radius: var(--border-radius-small);
+    display: block;
+    position: relative;
+    height: 650px;
+    width: 100%;
 }
