--- a/styles/components/image-wrapper.css
+++ b/styles/components/image-wrapper.css
@@ -8,21 +8,18 @@
     border-radius: var(--border-radius-small);
     position: relative;
     object-fit: cover;
-    /* z-index: -1; */
 }
 
-.wrapper-image-icons-container{
-    cursor: pointer;
-    background-color: white;
-    border: var(--border-utra-thin);
-    height: 2.5em;
-    width: 2.5em;
+.image-buttons-container{
+    display: block;
+    opacity: 0;
+}
+
+.image-buttons-container:hover{
+    opacity: 1;
 }
 
 .top-right-buttons{
-    background-color: rgba(50,50,50, 0.1);
-    border-top-right-radius: var(--border-radius-small);
-    border-bottom-left-radius: var(--border-radius-small);
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-around;
@@ -30,20 +27,27 @@
     position: absolute;
     top: 0;
     right: 0;
+    padding-right: 1em;
     height: 7em;
-    width: 3.5em;
     z-index: 1;
 }
 
+.wrapper-image-icons-container, .external-link-icon{
+    cursor: pointer;
+    background-color: white;
+    height: 2.5em;
+    width: 2.5em;
+}
+
+.wrapper-image-icons-container:hover, .external-link-icon:hover{
+    color: var(--highlight-color);
+}
+
 .bottom-options-span{
-    background-color: rgba(50,50,50, 0.3);
-    /* background-color: var(--secondary-bg-color); */
-    border-bottom-left-radius: var(--border-radius-small);
-    border-bottom-right-radius: var(--border-radius-small);
+    background-color: rgba(50,50,50, 0.1);
     color: white;
     position: absolute;
-    bottom: 0em;
-    left: 0;
+    bottom: 0;
     z-index: 1;
     display: flex;
     box-flex: row nowrap;
@@ -53,40 +57,23 @@
     width: 100%;
 }
 
-.image-icons{
-    display: block;
-    height: 20px;
-    width: 20px;
-}
-
-.external-link-icon{
-    cursor: pointer;
-    background-color: white;
-    border: var(--border-utra-thin);
-    margin-left: auto;
+.photographer-icon-wrapper{
+    background-color: var(--highlight-color);
+    border-radius: var(--border-radius-circle);
     height: 2.5em;
     width: 2.5em;
 }
 
-.top-right-buttons:hover, .bottom-options-span:hover{
-    opacity: 1;
-}
-
 .photographer-txt{
     margin-left: 0.25em;
-    font-size: 18px;
-    color: white;
 }
 
-.image-buttons-container{
+.external-link-icon{
+    margin-left: auto;
+}
+
+.image-icons{
     display: block;
-    opacity: 0.1;
-}
-
-.image-buttons-container:hover{
-    opacity: 1;
-}
-
-.wrapper-image-icons-container:hover, .external-link-icon:hover{
-    color: var(--red-color);
-}
+    height: 20px;
+    width: 20px;
+}   
