--- a/styles/layouts/navbar.css
+++ b/styles/layouts/navbar.css
@@ -3,7 +3,7 @@ nav{
     top: 0;
 }
 
-#index-navbar{
+#index-navbar, #global-navbar{
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
@@ -31,7 +31,7 @@ nav{
     padding: 0 0.3em;
 }
 
-.index-nav-bar-buttons{
+.index-nav-bar-buttons,.global-nav-bar-buttons{
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
@@ -41,7 +41,7 @@ nav{
     width: 10em;
 }
 
-.signup-wrapper, .theme-switch-wrapper{
+.signup-wrapper, .theme-switch-wrapper,.global-signup-wrapper,.global-theme-switch-wrapper{
     background-color: rgba(10,100,100, 0.1);
     border: 1px solid rgba(256,256,256, 0.5);
     color: white;
@@ -57,4 +57,29 @@ nav{
 .signup-wrapper:hover, .theme-switch-wrapper:hover{
     border: var(--border-thin);
     border-color: white;
+}
+
+.global-company-header{
+    border: var(--border-ultra-thin);
+    margin: 0 1em;
+    padding: 0.25em;
+}
+
+.global-signup-wrapper,.global-theme-switch-wrapper{
+    background-color: var(--primary-bg-color);
+    border: var(--border-ultra-thin);
+    color: black;
+}
+
+.global-theme-switch-wrapper{
+    width: 2.75em;
+}
+
+.global-company-header:hover,.global-signup-wrapper:hover,.global-theme-switch-wrapper:hover{
+    border: var(--border-thin);
+    border-color: var(--highlight-color);
+}
+
+.global-srchbx-wrapper{
+    flex-grow: 1;
 }
