reworking index page

--- a/styles/components/image-wrapper.css
+++ b/styles/components/image-wrapper.css
@@ -1,89 +1,5 @@
-.image-container{
-    cursor: pointer;
+.image-wrapper-div{
     position: relative;
     height: 100%;
     width: 100%;
-}
-
-.image-buttons-container{
-    display: block;
-    opacity: 0;
-}
-
-.image-buttons-container:hover{
-    opacity: 1;
-}
-
-.top-right-buttons{
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-around;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding-right: 1em;
-    height: 7em;
-    z-index: 1;
-}
-
-.wrapper-image-icons-container, .download-button-wrapper, .heart-icon-wrapper{
-    background-color: white;
-    border: var(--border-ultra-thin);
-    color: var(--main-text-color);
-    cursor: pointer;
-    height: 2.5em;
-    width: 2.5em;
-}
-
-.wrapper-image-icons-container:hover, .download-button-wrapper:hover{
-    color: var(--highlight-color);
-}
-
-.heart-icon-wrapper:hover{
-    color: var(--red-color);
-}
-
-.bottom-options-span{
-    background-color: rgba(50,50,50, 0.1);
-    color: white;
-    position: absolute;
-    bottom: 0;
-    z-index: 1;
-    display: flex;
-    box-flex: row nowrap;
-    align-items: center;
-    padding: 0 1em;
-    height: 4em;
-    width: 100%;
-}
-
-.photographer-icon-wrapper{
-    background-color: var(--highlight-color);
-    border-radius: var(--border-radius-circle);
-    height: 2.5em;
-    width: 2.5em;
-}
-
-.photographer-txt{
-    margin-left: 0.25em;
-}
-
-.download-button-wrapper{
-    margin-left: auto;
-}
-
-.image-icons{
-    display: block;
-    height: 20px;
-    width: 20px;
-}
-
-#global-image-container{
-    height: 700px;
-    width: 450px;
-}
-
-.custom-image{
-    object-fit: cover;
 }
