--- a/styles/layouts/index.css
+++ b/styles/layouts/index.css
@@ -3,11 +3,17 @@
 }
 
 .index-top-container{
-    background-color: #1A3A3A;
     display: flex;
     flex-flow: column nowrap;
     position: relative;
     height: 500px;
+}
+
+.index-bg-image{
+    position: relative;
+    object-fit: cover;
+    filter: brightness(85%);
+    z-index: -2;
 }
 
 .index-searchbox-container{
