--- a/styles/layouts/index.css
+++ b/styles/layouts/index.css
@@ -30,6 +30,8 @@
 .index-curated-images-container{
     display: flex;
     flex-flow: row nowrap;
+    position: relative;
+    height: auto;
     width: 100%;
 }
 
@@ -39,5 +41,13 @@
     flex-grow: 1;
     flex-shrink: 1;
     min-width: 0;
+    width: 100%;
+}
+
+.hider-div{
+    /* border-top: var(--border-ultra-thin); */
+    box-shadow: 0px -250px 0px rgba(50, 50, 50, 1);
+    position: absolute;
+    bottom: 0;
     width: 100%;
 }
