--- a/styles/layouts/index.css
+++ b/styles/layouts/index.css
@@ -24,30 +24,11 @@
 
 .curated-txt{
     font-size: 1.25em;
-    padding: 0.5em 0.3em 0 0.25em;
+    padding: 0.5em 0.3em 0.5em 0.25em;
 }
 
-.index-curated-images-container{
-    display: flex;
-    flex-flow: row nowrap;
-    position: relative;
-    height: auto;
-    width: 100%;
-}
-
-.column{
-    display: block;
-    flex-basis: 0;
-    flex-grow: 1;
-    flex-shrink: 1;
-    min-width: 0;
-    width: 100%;
-}
-
-.hider-div{
-    /* border-top: var(--border-ultra-thin); */
-    box-shadow: 0px -250px 0px rgba(50, 50, 50, 1);
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+.columns-container{
+    columns: 360px 3;
+    gap: 1em;
+    padding: 0 1em;
 }
