--- a/styles/layouts/navbar.css
+++ b/styles/layouts/navbar.css
@@ -8,6 +8,7 @@ nav{
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
+    justify-content: space-between;
     position: relative;
     padding: 0 1em;
     height: 4em;
@@ -58,4 +59,34 @@ nav{
 .global-header-link:hover{
     border: var(--border-thin);
     border-color: var(--highlight-color);
+}
+
+.heart-icon{
+    height: 20px;
+    width: 20px;
+}
+
+.index-heart-wrapper{
+    border: 1px solid rgba(256,256,256, 0.3);
+    color: white;
+    height: 2.5em;
+    width: 2.5em;
+}
+
+.index-heart-wrapper:hover{
+    border: var(--border-thin);
+    border-color: white; 
+    color: var(--red-color);
+}
+
+.global-heart-wrapper{
+    border: var(--border-ultra-thin);
+    height: 2.5em;
+    width: 2.5em;
+}
+
+.global-heart-wrapper:hover{
+    border: var(--border-thin);
+    border-color: var(--highlight-color);
+    color: var(--red-color);
 }
