added loading skeleton for index curated images

--- a/styles/animations/loading.css
+++ b/styles/animations/loading.css
@@ -22,9 +22,8 @@
     max-width: 460px;
 }
 
-.index-loading-div{
+.index-loading-container{
     height: 2500px;
-    width: 100%;
 }
 
 .pseudo-image{
