--- a/styles/components/searchbox.css
+++ b/styles/components/searchbox.css
@@ -8,8 +8,6 @@
     background-color: var(--grey-color);
     border: var(--border-ultra-thin);
     padding: .5em 2em .5em 0.75em;
-    height: 38px;
-    width: 30em;
 }
 
 .search-icon-wrapper{
@@ -28,4 +26,11 @@
 
 .search-icon-wrapper:hover{
     color: var(--highlight-color);
+}
+
+@media only screen and (max-width: 768px) {
+    .searchbox-wrapper{
+        height: 32px;
+        width: 18em;
+    }
 }
