--- a/styles/layouts/index.css
+++ b/styles/layouts/index.css
@@ -28,30 +28,23 @@
 }
 
 .columns-container{
-    columns: 360px 3;
+    columns: auto 3;
     gap: 1em;
     padding: 0 1em;
 }
 
-.show-more-div-container{
-    position: relative;
-    height: auto;
-    width: 460px;
+@media only screen and (max-width: 768px) {
+    .columns-container{
+        columns: auto 3;
+    }
+
+    .curated-txt{
+        font-size: 1em;
+    }
 }
 
-.flower-image{
-    cursor: pointer;
-    filter: brightness(75%);
-    position: relative;
-    object-fit: cover;
-}
-
-.more-curated-link{
-    color: white;
-    position: absolute;
-    font-size: 1.25em;
-}
-
-.more-curated-link:hover{
-    font-size: 1.3em;
+@media only screen and (max-width: 500px) {
+    .columns-container{
+        columns: auto 2;
+    }
 }
