done mobile responsivity for footer

--- a/styles/components/image-wrapper.css
+++ b/styles/components/image-wrapper.css
@@ -81,7 +81,7 @@
 .download-icon-wrapper{
     margin-left: auto;
 }
-
+/* 
 @media only screen and (max-width: 768px) {
     .top-right-buttons{
         margin-right: 0.25em;
@@ -106,4 +106,4 @@
     .photographer-name{
         margin-left: 0.25em;
     }
-}
+} */
