--- a/styles/layouts/index.css
+++ b/styles/layouts/index.css
@@ -33,7 +33,7 @@
     padding: 0 1em;
 }
 
-@media only screen and (max-width: 768px) {
+/* @media only screen and (max-width: 768px) {
     .columns-container{
         columns: auto 3;
     }
@@ -41,10 +41,10 @@
     .curated-txt{
         font-size: 1em;
     }
-}
-
+} */
+/* 
 @media only screen and (max-width: 500px) {
     .columns-container{
         columns: auto 2;
     }
-}
+} */
