--- a/styles/layouts/index.css
+++ b/styles/layouts/index.css
@@ -1,5 +1,6 @@
 .index-page-container{
     position: relative;
+    margin-bottom: 1em;
 }
 
 .index-top-container{
@@ -18,7 +19,7 @@
 
 .index-searchbox-container{
     flex-grow: 1;
-    padding: 0 1em;
+    padding: 0 0.75em;
     width: 100%;
 }
 
@@ -27,24 +28,32 @@
     padding: 0.5em 0.3em 0.5em 0.25em;
 }
 
+.index-min-height{
+    min-height: 850px;
+}
+
 .columns-container{
     columns: auto 3;
-    gap: 1em;
+    gap: 0.75em;
     padding: 0 1em;
 }
 
-/* @media only screen and (max-width: 768px) {
+@media only screen and (max-width: 896px) {
     .columns-container{
-        columns: auto 3;
+        columns: auto 2;
+        gap: 5px;
+        padding: 0 5px;
     }
 
     .curated-txt{
         font-size: 1em;
     }
-} */
-/* 
-@media only screen and (max-width: 500px) {
+}
+
+@media only screen and (max-width: 480px) {
     .columns-container{
-        columns: auto 2;
+        columns: auto 1;
+        gap: 5px;
+        padding: 0 5px;
     }
-} */
+}
