--- a/styles/layouts/navbar.css
+++ b/styles/layouts/navbar.css
@@ -31,7 +31,7 @@ nav{
     color: white;
     background-color: var(--highlight-darker-color);
     border-radius: var(--border-radius-small);
-    padding: 0 0.3em;
+    padding: 0 0.25em;
 }
 
 #global-navbar{
@@ -67,8 +67,8 @@ nav{
 .index-heart-wrapper{
     border: 1px solid rgba(256,256,256, 0.3);
     color: white;
-    height: 2.5em;
-    width: 2.5em;
+    height: 40px;
+    width: 40px;
 }
 
 .index-heart-wrapper:hover{
@@ -79,8 +79,8 @@ nav{
 
 .global-heart-wrapper{
     border: var(--border-ultra-thin);
-    height: 2.5em;
-    width: 2.5em;
+    height: 40px;
+    width: 40px;
 }
 
 .global-heart-wrapper:hover{
@@ -89,43 +89,21 @@ nav{
     color: var(--red-color);
 }
 
-/* @media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
     #index-navbar{
         padding: 0 0.5em;
-        height: 3em;
     }
 
     .company-header-link{
         font-size: 14px;
-        padding: 0 0.25em;
-        height: 36px;
-        width: auto;
     }
 
     #global-navbar{
         padding: 0 0.5em;
-        height: 3em;
-    }
-
-    .global-header-link{
-        font-size: 14px;
-        padding: 0 0.25em;
-        height: 36px;
-        width: auto;
     }
 
     .heart-icon{
         height: 18px;
         width: 18px;
     }
-
-    .index-heart-wrapper{
-        height: 36px;
-        width: 36px;
-    }
-
-    .global-heart-wrapper{
-        height: 36px;
-        width: 36px;
-    }
-} */
+}
